Fixed centering in cells of article-data-table. Also moved chips from search bar up to not overlap with table. Increased width of container for chips from search bar

--- a/src/app/search-bar/search-bar.component.less
+++ b/src/app/search-bar/search-bar.component.less
@@ -17,7 +17,7 @@ div.mat-form-field-infix {
 }
 
 .chip-list {
-    max-width: 280px;
+    max-width: 90%;
     display: flex;
     flex-shrink: 1;
     flex-wrap: wrap;
